Updated README and gem description

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,17 +1,11 @@
-= blue_light_special
+= BlueLightSpecial
 
-Description goes here.
-
-== Note on Patches/Pull Requests
- 
-* Fork the project.
-* Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
-* Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
-* Send me a pull request. Bonus points for topic branches.
+BlueLightSpecial is a derivative from Thoughtbot's 
+{Clearance}[http://github.com/thoughtbot/clearance] gem.  It authenticates 
+a visitor by email and password, but additionally integrates MadMimi for 
+outgoing notification emails.  Also, a role system and administrative user
+impersonation are baked in.
 
 == Copyright
 
-Copyright (c) 2010 Nathaniel Bibler. See LICENSE for details.
+Copyright (c) 2010 Envy Labs LLC. See LICENSE for details.
