--- a/test/rails_root/config/locales/en.yml
+++ b/test/rails_root/config/locales/en.yml
@@ -1,5 +1,7 @@
 en:
   blue_light_special:
+    authentication:
+      facebook_log_out: Bye bye Facebook
     models:
       blue_light_special_mailer:
         change_password: Change your password
