--- a/generators/blue_light_special_tests/templates/README
+++ b/generators/blue_light_special_tests/templates/README
@@ -26,7 +26,7 @@ Next:
          visit url_to_visit
          fill_in "Email",      :with => email
          fill_in "Password",   :with => password
-         click_button "Login!"
+         click_button "sign in"
        end
 
        def reset_session
