--- a/generators/blue_light_special/templates/README
+++ b/generators/blue_light_special/templates/README
@@ -13,6 +13,12 @@ Next:
 
      rake db:migrate
 
+3. If you haven't already, be sure you have delayed_jobs and facebooker setup 
+   and configured:
+   
+     ./script/generate delayed_job
+     ./script/generate facebook
+
 4. Make sure you're displaying flashes somewhere. For instance, in a layout:
 
     <div id="flash">
