--- a/generators/blue_light_special/templates/README
+++ b/generators/blue_light_special/templates/README
@@ -9,13 +9,11 @@ Next:
 
      config.action_mailer.default_url_options = { :host => 'localhost:3000' }
 
-3. If you haven't already, be sure you have delayed_jobs and facebooker setup 
-   and configured:
+2. If you haven't already, be sure you have delayed_jobs setup and configured:
 
      ./script/generate delayed_job
-     ./script/generate facebook
 
-2. Migrate:
+3. Migrate:
 
      rake db:migrate
 
